2025-07-19T01:46:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16383611937 # 709
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-19
* notice: last 14d: unq all: 5 1642
* notice: prev accum: outdated-unq outdated-all / unq all: 2689 261251 / 2719 262964
* notice: next accum: outdated-unq outdated-all / unq all: 2692 261373 / 2721 263085
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -1 -70 / +2 +19 -0 -0 / 2 19
* notice: removed / changed dates: [2025-07-04] / [2025-07-05 2025-07-18 2025-07-19]

2025-07-18T01:52:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16360217164 # 708
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-18
* notice: last 14d: unq all: 7 1644
* notice: prev accum: outdated-unq outdated-all / unq all: 2687 261130 / 2718 262844
* notice: next accum: outdated-unq outdated-all / unq all: 2689 261251 / 2719 262964
* notice: prev exec diff / last date diff / accum: unq all: +1 +120 -1 -69 / +1 +16 -0 -0 / 1 16
* notice: removed / changed dates: [2025-07-03] / [2025-07-04 2025-07-17 2025-07-18]

2025-07-17T01:50:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16334279339 # 707
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-17
* notice: last 14d: unq all: 7 1645
* notice: prev accum: outdated-unq outdated-all / unq all: 2686 261010 / 2716 262726
* notice: next accum: outdated-unq outdated-all / unq all: 2687 261130 / 2718 262844
* notice: prev exec diff / last date diff / accum: unq all: +2 +118 -1 -69 / +2 +16 -0 -0 / 2 16
* notice: removed / changed dates: [2025-07-02] / [2025-07-03 2025-07-16 2025-07-17]

2025-07-16T01:49:37Z: