@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-07T01:49:56Z",
-  "count" : 123,
+  "timestamp" : "2025-07-20T01:58:46Z",
+  "count" : 60,
   "count_minmax" : [ 13, 123 ],
-  "count_decinc" : [ -0, +123 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -63, +123 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
