@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-07-20T01:58:46Z",
-  "count" : 122,
-  "count_minmax" : [ 19, 122 ],
-  "count_decinc" : [ -0, +122 ],
+  "count" : 11,
+  "count_minmax" : [ 11, 11 ],
+  "count_decinc" : [ -0, +11 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
