@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-19T01:46:28Z",
-  "count_outdated" : 261373,
-  "uniques_outdated" : 2692,
-  "count" : 263085,
-  "uniques" : 2721,
+  "timestamp" : "2025-07-20T01:58:46Z",
+  "count_outdated" : 261499,
+  "uniques_outdated" : 2695,
+  "count" : 263199,
+  "uniques" : 2723,
   "clones" : [
     {
-      "timestamp": "2025-07-05T00:00:00Z",
-      "count": 56,
-      "count_minmax": [ 25, 126 ],
-      "count_decinc": [ 70, 126 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
       "timestamp": "2025-07-06T00:00:00Z",
-      "count": 123,
+      "count": 60,
       "count_minmax": [ 13, 123 ],
-      "count_decinc": [ 0, 123 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 63, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-07T00:00:00Z",
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
-      "count_decinc": [ 0, 19 ],
+      "count": 122,
+      "count_minmax": [ 19, 122 ],
+      "count_decinc": [ 0, 122 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
