@@ -1,16 +1,11 @@
 {
-  "count": 1642,
-  "uniques": 5,
+  "count": 1637,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-07-05T00:00:00Z",
-      "count": 56,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-07-06T00:00:00Z",
-      "count": 123,
-      "uniques": 2
+      "count": 60,
+      "uniques": 1
     },
     {
       "timestamp": "2025-07-07T00:00:00Z",
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
-      "count": 19,
+      "count": 122,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
+      "count": 11,
       "uniques": 2
     }
   ]
